# revolut-trader

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  LICENSE  Makefile  README-ENV-DEPRECATED.txt  README.md  SECURITY.md  backtest.py  coverage.json  dashboard.py  dashboard_test.py  justfile  pyproject.toml  run.py  setup.sh  sonar-project.properties
.claude/: API_REFERENCE.md  API_REVIEW_REPORT.md  CLAUDE.md  CODING_STANDARDS.md  EUR_MIGRATION_SUMMARY.md  PROJECT_RULES.md  QUICK_START.md  README.md  agent-config.json  settings.json
.claude/agents/: audit-docs.md  backtest-analyst.md  code-improvement.md  docs-reviewer.md  security-reviewer.md  strategy-researcher.md  strategy-review.md  testing-debug.md
.claude/commands/: README.md  code-improvement.md  review.md  revolut-api.md
.claude/hooks/: check_sonar_issues.sh  deps-audit.sh  post_edit_check.sh
.claude/mcp_servers/onepassword/: server.py
.claude/memory/: MEMORY.md  feedback_docs_always_updated.md  feedback_project_level_only.md  project_agents_md_removed.md
.claude/prompts/: deployment-check.md  security-audit.md  strategy-review.md  testing-debug.md
.claude/rules/: deployment-check.md  security-audit.md
.claude/skills/: trading-bot.md
.claude/skills/deployment-check/: SKILL.md
.claude/skills/revolut-api/: SKILL.md
.claude/skills/security-audit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  git-commit-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: README.md  backtest-analyst.agent.md  strategy-review.agent.md  testing-debug.agent.md
.github/instructions/: deployment-check.instructions.md  security-audit.instructions.md
.github/prompts/: revolut-api.prompt.md
.github/workflows/: analytics.yml  backtest.yml  ci.yml  codeql.yml  diagrams.yml  promote.yml  release.yml  sonarcloud.yml
cli/: analytics_report.py  api_test.py  backtest.py  backtest_ci.py  backtest_compare.py  dashboard.py  db_encrypt.py  db_manage.py  env_detect.py  revt.py  run.py  telegram_control.py  validators.py  view_logs.py
cli/commands/: api.py  backtest.py  backtest_compare.py  db.py  run.py  telegram.py
cli/utils/: analytics_report.py  backtest_args.py  env_detect.py  view_logs.py
data/: .gitkeep
data/reports/: report.md
docs/: 1PASSWORD.md  1PASSWORD_CONFIG.md  1PASSWORD_INTEGRATION.md  ARCHITECTURE.md  BACKTESTING.md  CREDENTIALS.md  DASHBOARD.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDELINES.md  END_USER_GUIDE.md  IMPLEMENTATION_NOTES_2025-12-27.md  OPTIMIZATION_REPORT_2025-12-27.md  RASPBERRY_PI_DEPLOYMENT.md  README.md  TELEGRAM_BOT_COMMANDS.md  USER_GUIDE.md  revolut-trader.drawio  revolut-x-api-docs.md
reports/: DOCUMENTATION_AUDIT_REPORT.md  README.md
results/: aggressive_test.json  backtest_20251227_200438.json  backtest_20251227_203706.json  backtest_20251227_203815.json  backtest_20251227_205451.json  backtest_20251227_205547.json  backtest_20251227_205659.json  backtest_20251227_205738.json  backtest_20251227_205815.json  backtest_20251227_210221.json  backtest_20251229_143525.json  backtest_20251229_145540.json  market_making.json  mean_reversion.json  momentum.json  multi_strategy.json
scripts/: 1password-manager.sh  setup.sh
src/: bot.py  config.py
src/api/: __init__.py  client.py  mock_client.py
src/backtest/: __init__.py  engine.py
src/data/: models.py
src/execution/: executor.py
src/models/: db.py  db_models.py  domain.py
src/notifications/: telegram.py
src/risk_management/: risk_manager.py
src/strategies/: base_strategy.py  breakout.py  market_making.py  mean_reversion.py  momentum.py  multi_strategy.py  range_reversion.py
src/utils/: __init__.py  db_encryption.py  db_migration.py  db_persistence.py  fees.py  hybrid_persistence.py  indicators.py  onepassword.py  persistence.py  rate_limiter.py  telegram.py
tests/: __init__.py  conftest.py  test_config.py
tests/mocks/: mock_onepassword.py
tests/safety/: __init__.py  test_config_required.py  test_currency_mismatch.py  test_environment.py  test_fees_config.py  test_graceful_shutdown.py  test_max_capital.py  test_order_limits.py  test_pre_existing_crypto.py  test_risk_config.py  test_strategy_config.py
tests/unit/: test_analytics_report.py  test_api_client.py  test_api_test_cli.py  test_backtest.py  test_backtest_compare.py  test_backtest_engine.py  test_bot.py  test_calculations.py  test_cli_commands_db.py  test_cli_commands_run.py  test_coverage_gaps.py  test_database_logging.py  test_db_encryption.py  test_db_persistence.py  test_executor.py  test_executor_adaptive_close.py  test_executor_fees.py  test_fees.py  test_hybrid_persistence.py  test_indicators.py  test_mock_api.py  test_mock_api_client.py  test_models.py  test_onepassword.py  test_persistence.py  test_rate_limiter.py  test_revt.py  test_risk_manager.py  test_strategies.py  test_strategy_improvements.py  test_telegram.py  test_telegram_control.py  test_validators.py  test_view_logs.py
