[project]
name = "revolut-trader"
version = "0.1.0"
description = "Professional algorithmic trading bot for Revolut Crypto API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "T20",  # flake8-print — no print() in production code
    "SIM",  # flake8-simplify
    "PIE",  # misc lints
    "RET",  # return statement checks
    "PT",   # pytest style
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"cli/**" = ["T201"]          # CLI scripts legitimately use print()
"tests/**" = ["T201", "SIM117"]  # tests: print for debugging, nested with for readability
"src/backtest/engine.py" = ["T201"]       # display_results() prints to console
"src/utils/db_encryption.py" = ["T201"]   # __main__ block prints setup status

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",  # Skip assert_used check (common in tests)
    "B404",  # Import subprocess - safe usage for 1Password CLI
    "B603",  # Subprocess without shell - safe, using list arguments
    "B607",  # Partial executable path - safe, using op CLI tool
]
