[project]
name = "revolut-trader"
version = "0.7.2"
description = "Professional algorithmic trading bot for Revolut Crypto API"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amir Nasari", email = "amir@nasari.me" }]
readme = "README.md"
keywords = ["trading", "revolut", "crypto", "algorithmic-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Environment :: Console",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "httpx~=0.28",
    "pydantic~=2.12",
    "pydantic-settings~=2.12",
    "cryptography~=46.0",
    "loguru~=0.7",
    "sqlalchemy~=2.0",
]

[project.optional-dependencies]
analytics = [
    "matplotlib~=3.10",
    "numpy~=2.2",
    "fpdf2~=2.8",
]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
    "ruff~=0.14",
    "pyright~=1.1",
    "pre-commit~=4.5",
    "bandit~=1.9",
    "commitizen~=4.0",
    "pylint~=4.0",
    "pyinstaller~=6.0",
]

[project.scripts]
revt = "cli.revt:main"

[build-system]
requires = ["hatchling~=1.29"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "A",    # flake8-builtins — prevent shadowing builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez — enforce timezone-aware datetimes
    "N",    # pep8-naming — naming conventions
    "UP",   # pyupgrade
    "T20",  # flake8-print — no print() in production code
    "SIM",  # flake8-simplify
    "PIE",  # misc lints
    "RET",  # return statement checks
    "PT",   # pytest style
    "PERF", # perflint — performance anti-patterns
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF001",  # ambiguous unicode — intentional display characters
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"cli/**" = ["T201"]          # CLI scripts legitimately use print()
"cli/utils/analytics_report.py" = ["E402"]  # imports after _set_env()
"cli/commands/api.py" = ["E402"]          # imports after _set_env()
"cli/commands/backtest.py" = ["E402"]          # imports after _set_env()
"cli/commands/backtest_compare.py" = ["E402"]  # imports after _set_env()
"cli/commands/db.py" = ["E402"]         # imports after _set_env()
"cli/commands/run.py" = ["E402"]               # imports after _set_env()
"cli/commands/telegram.py" = ["E402"]  # imports after _set_env()
"cli/utils/view_logs.py" = ["E402"]         # imports after _set_env()
"tests/**" = ["T201", "SIM117"]  # tests: print for debugging, nested with for readability
"src/backtest/engine.py" = ["T201"]       # display_results() prints to console
"src/utils/db_encryption.py" = ["T201"]   # __main__ block prints setup status

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",  # SQLAlchemy pool cleanup in SQLite tests
    "ignore:AutoDateLocator was unable to pick an appropriate interval:UserWarning",  # matplotlib with minimal mock data in tests
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.coverage.report]
fail_under = 97

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",  # Skip assert_used check (common in tests)
    "B404",  # Import subprocess - safe usage for 1Password CLI
    "B603",  # Subprocess without shell - safe, using list arguments
    "B607",  # Partial executable path - safe, using op CLI tool
    "B608",  # SQL injection in strings - produces false positives on error messages
]
